<resources>
    <string name="app_name">Pips Lover</string>

    <string-array name="pair_name">
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>
        <item>XAU/USD</item>


    </string-array>


    <string-array name="pair_desc">
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>
        <item>Bit the gold</item>


    </string-array>

    <string name="home">home</string>
    <string name="dashboard">dashboard</string>
    <string name="about">about</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="riskratio">Risk Ratio</string>
    <string name="report">Monthly Report</string>
    <string name="privecy"><![CDATA[Privecy & Policy]]></string>
    <string name="share">Share</string>
    <string name="login_email">user_login_info</string>
    <string name="login_password">user_login_info</string>
    <string name="login_info">login_info</string>
    <string name="chart">Weekly Chart</string>
    <string name="logout">Log Out</string>
    <string name="referd_monitor">Reference Monitor</string>
    <string name="pips_lover">Pips Lover</string>

</resources>