<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/dashboard"/>

    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/about"/>
    <item
        android:id="@+id/risk_ratio"
        android:title="@string/riskratio"
        android:icon="@drawable/home"/>

    <!--<item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/dashboard"/>-->
    <item
        android:id="@+id/chart"
        android:title="@string/chart"
        android:icon="@drawable/about"/>
    <item
        android:id="@+id/referd_monitor"
        android:title="@string/referd_monitor"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/privecy"
        android:title="@string/privecy"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/about"/>

</menu>